feat: add one or two character support